--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean": "rimraf dist",
     "web": "webpack-dev-server",
     "rest": "json-server --watch --port 3010 db.json",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest --no-cache"
   },
   "keywords": [
     "react",
@@ -20,9 +21,11 @@
   "license": "MIT",
   "devDependencies": {
     "@types/core-js": "0.9.43",
+    "@types/jest": "20.0.8",
     "@types/react": "16.0.5",
     "@types/react-dom": "15.5.4",
     "@types/react-redux": "5.0.6",
+    "@types/react-test-renderer": "15.5.4",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "concurrently": "3.5.0",
@@ -71,6 +74,19 @@
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "whatwg-fetch": "2.0.3"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "<rootDir>/preprocessor.js"
+    },
+    "testMatch": [
+      "**/*.test.(ts|tsx|js)"
+    ]
   },
   "devServer": {
     "contentBase": "dist",
