--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "15.5.4",
     "@types/react-redux": "5.0.6",
     "@types/react-test-renderer": "15.5.4",
+    "@types/reactstrap": "4.3.13",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "concurrently": "3.5.0",
@@ -67,10 +68,13 @@
     "null-loader": "0.1.1",
     "raw-loader": "0.5.1",
     "react": "15.6.1",
+    "react-addons-css-transition-group": "15.6.0",
+    "react-addons-transition-group": "15.6.0",
     "react-dom": "15.6.1",
     "react-redux": "5.0.6",
     "react-router": "4.2.0",
     "react-router-redux": "4.0.8",
+    "reactstrap": "4.8.0",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "whatwg-fetch": "2.0.3"
