--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react",
     "redux",
     "webpack",
-    "typescript"
+    "typescript",
+    "jest"
   ],
   "author": "Eric W. Greene",
   "license": "MIT",
@@ -23,8 +24,12 @@
     "@types/core-js": "0.9.43",
     "@types/jest": "20.0.8",
     "@types/react": "16.0.5",
+    "@types/react-addons-css-transition-group": "15.0.3",
+    "@types/react-addons-transition-group": "15.0.1",
     "@types/react-dom": "15.5.4",
     "@types/react-redux": "5.0.6",
+    "@types/react-router": "4.0.15",
+    "@types/react-router-redux": "5.0.8",
     "@types/react-test-renderer": "15.5.4",
     "@types/reactstrap": "4.3.13",
     "babel-eslint": "7.2.3",
