--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/core-js": "0.9.43",
+    "@types/enzyme": "^2.8.7",
     "@types/jest": "20.0.8",
     "@types/prop-types": "^15.5.1",
     "@types/react": "16.0.5",
